--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
-    "node-fetch": "1.3.3",
+    "flux": "^2.1.1",
+    "jwt-decode": "^1.5.1",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "react-router": "^2.0.1",
