--- a/package.json
+++ b/package.json
@@ -1,51 +1,37 @@
 {
-  "name": "react-hot-boilerplate",
+  "name": "euro-2016-betting",
   "version": "1.0.0",
-  "description": "Boilerplate for ReactJS project with hot code reloading",
+  "description": "euro-2016-betting",
   "scripts": {
     "start": "node server.js",
     "lint": "eslint src"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gaearon/react-hot-boilerplate.git"
-  },
-  "keywords": [
-    "react",
-    "reactjs",
-    "boilerplate",
-    "hot",
-    "reload",
-    "hmr",
-    "live",
-    "edit",
-    "webpack"
-  ],
-  "author": "Dan Abramov <dan.abramov@me.com> (http://github.com/gaearon)",
+  "author": "Joni Väyrynen",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/gaearon/react-hot-boilerplate/issues"
+  "scripts": {
+    "build": "webpack --config ./webpack.prod.config.js --progress --colors",
+    "start": "node ./app.js"
   },
-  "homepage": "https://github.com/gaearon/react-hot-boilerplate",
   "devDependencies": {
-    "babel-core": "^6.0.20",
-    "babel-eslint": "^4.1.3",
-    "babel-loader": "^6.0.1",
-    "babel-preset-es2015": "^6.0.15",
-    "babel-preset-react": "^6.0.15",
-    "babel-preset-stage-0": "^6.0.15",
+    "babel": "^6.5.2",
+    "babel-cli": "^6.6.5",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.23.1",
-    "eslint": "^1.10.3",
-    "eslint-plugin-react": "^3.6.2",
-    "file-loader": "0.8.5",
+    "file-loader": "^0.8.5",
     "node-sass": "^3.4.2",
-    "react-hot-loader": "^1.3.0",
     "sass-loader": "^3.2.0",
-    "style-loader": "^0.13.0",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.6",
     "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.12.1"
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-hot-middleware": "^2.10.0"
   },
   "dependencies": {
+    "express": "^4.13.4",
     "classnames": "^2.2.3",
     "flux": "^2.1.1",
     "jwt-decode": "^1.5.1",
