--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "Joni Väyrynen",
   "license": "MIT",
   "scripts": {
-    "build": "webpack --config ./webpack.prod.config.js --progress --colors",
+    "build": "NODE_ENV=production webpack --config ./webpack.prod.config.js --progress --colors",
     "start": "node ./app.js"
   },
   "devDependencies": {
