--- a/package.json
+++ b/package.json
@@ -9,26 +9,27 @@
   "author": "Joni Väyrynen",
   "license": "MIT",
   "scripts": {
-    "build": "NODE_ENV=production webpack --config ./webpack.prod.config.js --progress --colors",
-    "start": "node ./app.js"
+    "build": "webpack --config ./webpack.prod.config.js --progress --colors",
+    "start": "node app.js",
+    "lint": "eslint src"
   },
   "devDependencies": {
-    "babel": "^6.5.2",
-    "babel-cli": "^6.6.5",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-react-hmre": "^1.1.1",
-    "babel-preset-stage-0": "^6.5.0",
+    "babel-core": "^6.0.20",
+    "babel-eslint": "^4.1.3",
+    "babel-loader": "^6.0.1",
+    "babel-preset-es2015": "^6.0.15",
+    "babel-preset-react": "^6.0.15",
+    "babel-preset-stage-0": "^6.0.15",
     "css-loader": "^0.23.1",
-    "file-loader": "^0.8.5",
+    "eslint": "^1.10.3",
+    "eslint-plugin-react": "^3.6.2",
+    "file-loader": "0.8.5",
     "node-sass": "^3.4.2",
+    "react-hot-loader": "^1.3.0",
     "sass-loader": "^3.2.0",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.6",
+    "style-loader": "^0.13.0",
     "webpack": "^1.12.14",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.10.0"
+    "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
     "express": "^4.13.4",
