--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack --config ./webpack.prod.config.js --progress --colors",
-    "start": "node app.js",
-    "lint": "eslint src"
+    "start": "node ./app.js"
   },
   "devDependencies": {
     "babel-core": "^6.0.20",
