--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "webpack-hot-middleware": "^2.10.0"
   },
   "dependencies": {
+    "webpack": "^1.12.14",
     "express": "^4.13.4",
     "classnames": "^2.2.3",
     "flux": "^2.1.1",
